repairing mobile horizontal overflow in posts

--- a/css/post.sass
+++ b/css/post.sass
@@ -5,106 +5,121 @@
 @import mixins
 
 div#header li#articles a
-	color: $baseColor1
-	font-weight: bold
+  color: $baseColor1
+  font-weight: bold
 
 div#meta
-	margin-bottom: 30px
+  margin-bottom: 30px
 
-	span
-		bottom: 0
-		color: $baseColor2
+  span
+    bottom: 0
+    color: $baseColor2
 
-	div#tags
-		span
-			color: $baseColor1
+  div#tags
+    span
+      color: $baseColor1
 
 div#post
-	margin-bottom: 50px
+  margin-bottom: 50px
 
-	#toc
-		margin-bottom: 40px
-		width: 100%
+  #toc
+    margin-bottom: 40px
+    width: 100%
 
-		.tocnumber
-			color: $baseColor1
+    .tocnumber
+      color: $baseColor1
 
-		.toctext
-			float: right
+    .toctext
+      float: right
+      overflow-wrap: anywhere
+      word-break: break-word
 
-		.toc_level-1 > a
-			font-size: 1.5em
+    .toc_level-1 > a
+      font-size: 1.5em
 
-		.toc_level-2
-			border-bottom: 1px dashed #bbb
-			margin-bottom: 4px
+    .toc_level-2
+      border-bottom: 1px dashed #bbb
+      margin-bottom: 4px
 
-		ul
-			list-style-type: none
-			margin-left: 0px
+    ul
+      list-style-type: none
+      margin-left: 0px
 
-		ul ul
-			margin-left: 40px
+    ul ul
+      margin-left: 40px
 
-		#toctitle
-			display: none
+    #toctitle
+      display: none
 
-	ol, ul
-		>li
-			margin-bottom: 10px
+  ol, ul
+    >li
+      margin-bottom: 10px
 
-	ul
-		list-style: disc outside none
-		margin-left: 40px
+  ul
+    list-style: disc outside none
+    margin-left: 40px
 
-	img
-		display: block
-		margin: 28px auto
-		max-width: 100%
+  img
+    display: block
+    margin: 28px auto
+    max-width: 100%
 
-	sup
-		font-size: 0.8em
-		line-height: 0
+  sup
+    font-size: 0.8em
+    line-height: 0
 
-	p#mathjax-warning
-		color: red
-		font-size: 1.1em
+  p#mathjax-warning
+    color: red
+    font-size: 1.1em
 
-	div.quote
-		border-left: 4px solid #ccc
-		color: #333
-		font-size: 0.9em
-		font-style: italic
-		padding: 5px 0 0 40px
-		padding-bottom: 2em
-		width: 80%
+  div.quote
+    border-left: 4px solid #ccc
+    color: #333
+    font-size: 0.9em
+    font-style: italic
+    padding: 5px 0 0 40px
+    padding-bottom: 2em
+    width: 80%
 
-		div
-			color: #666
-			margin-top: 1em
-			float: right
-			font-style: normal
-			font-weight: bold
+    div
+      color: #666
+      margin-top: 1em
+      float: right
+      font-style: normal
+      font-weight: bold
+
+  // --- minimal mobile overflow fix ---
+  @media (max-width: 560px)
+    #toc
+      .toctext
+        float: none
+
+      ul ul
+        margin-left: 1.2em
+
+    ul
+      margin-left: 1.2em
+  // --- end fix ---
 
 h1#related-posts
-	margin-top: 80px
+  margin-top: 80px
 
 section#comments
-	margin-bottom: 150px
+  margin-bottom: 150px
 
-	.input-wrapper
-		margin-right: 10px
+  .input-wrapper
+    margin-right: 10px
 
-	.post-action > input
-		@extend .t3
+  .post-action > input
+    @extend .t3
 
-		background-color: $baseColor1
-		color: white
-		font-size: 0.9em
-		padding: 4px 30px
+    background-color: $baseColor1
+    color: white
+    font-size: 0.9em
+    padding: 4px 30px
 
-		&:hover
-			background-color: $baseColor1 * 0.85
+    &:hover
+      background-color: $baseColor1 * 0.85
 
-	#comments-noscript
-		color: red
+  #comments-noscript
+    color: red
